# pyakuvox

./: .gitignore  .pre-commit-config.yaml  REUSE.toml  pyproject.toml
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: build-test.yaml  release-drafter.yaml  semantic-pull-request.yaml  sha-pinned-actions.yaml  tag-push.yaml
src/pyakuvox/: __init__.py  api.py  auth.py  communities.py  const.py  devices.py  exceptions.py
tests/: test_api.py  test_auth.py  test_communities.py  test_devices.py
