# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2023 Andrew Grimberg <tykeal@bardicgrove.org>

[project]
name = "pyakuvox"
dynamic = ["version"]
description = "Python library for use with Akuvox intercoms"
readme = "README.md"
authors = [
    { name = "Andrew Grimberg", email = "tykeal@bardicgrove.org" }
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.4",
]
license = {text = "Apache-2.0"}

[project.optional-dependencies]
testing = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true
fallback-version = "0.0.0"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "types-pexpect>=4.9.0.20250516",
    "types-pygments>=2.19.0.20250715",
    "types-requests>=2.32.4.20250611",
]

[tool.coverage.run]
branch = false
omit = [
    "tests/*",
    "docs/*",
    "examples/*",
    "scripts/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
mypy_path = [
    "./src",
    "./tests"
]
[tool.pytest.ini_options]
addopts = [
    "--cov=pyakuvox",
    "--cov-report=term",
    "--cov-report=xml",
]
